// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSections() should return an array 1`] = `
Array [
  Object {
    "components": Array [],
    "content": RequireStatement {
      "filepath": "!!<rootDir>/loaders/examples-loader.js!<rootDir>/test/components/Button/Readme.md",
    },
    "name": "Readme",
    "sections": Array [],
    "slug": "readme-1",
  },
  Object {
    "components": Array [
      Object {
        "filepath": "components/Button/Button.js",
        "hasExamples": true,
        "metadata": Object {},
        "module": RequireStatement {
          "filepath": "<rootDir>/test/components/Button/Button.js",
        },
        "pathLine": "components/Button/Button.js",
        "props": RequireStatement {
          "filepath": "!!<rootDir>/loaders/props-loader.js!<rootDir>/test/components/Button/Button.js",
        },
        "slug": "button-1",
      },
      Object {
        "filepath": "components/Placeholder/Placeholder.js",
        "hasExamples": true,
        "metadata": RequireStatement {
          "filepath": "!!json-loader!<rootDir>/test/components/Placeholder/Placeholder.json",
        },
        "module": RequireStatement {
          "filepath": "<rootDir>/test/components/Placeholder/Placeholder.js",
        },
        "pathLine": "components/Placeholder/Placeholder.js",
        "props": RequireStatement {
          "filepath": "!!<rootDir>/loaders/props-loader.js!<rootDir>/test/components/Placeholder/Placeholder.js",
        },
        "slug": "placeholder-1",
      },
      Object {
        "filepath": "components/RandomButton/RandomButton.js",
        "hasExamples": true,
        "metadata": Object {},
        "module": RequireStatement {
          "filepath": "<rootDir>/test/components/RandomButton/RandomButton.js",
        },
        "pathLine": "components/RandomButton/RandomButton.js",
        "props": RequireStatement {
          "filepath": "!!<rootDir>/loaders/props-loader.js!<rootDir>/test/components/RandomButton/RandomButton.js",
        },
        "slug": "randombutton-1",
      },
    ],
    "content": undefined,
    "name": "Components",
    "sections": Array [],
    "slug": "components-1",
  },
]
`;

exports[`processSection() should return an object for section with components 1`] = `
Object {
  "components": Array [
    Object {
      "filepath": "components/Button/Button.js",
      "hasExamples": true,
      "metadata": Object {},
      "module": RequireStatement {
        "filepath": "<rootDir>/test/components/Button/Button.js",
      },
      "pathLine": "components/Button/Button.js",
      "props": RequireStatement {
        "filepath": "!!<rootDir>/loaders/props-loader.js!<rootDir>/test/components/Button/Button.js",
      },
      "slug": "button",
    },
    Object {
      "filepath": "components/Placeholder/Placeholder.js",
      "hasExamples": true,
      "metadata": RequireStatement {
        "filepath": "!!json-loader!<rootDir>/test/components/Placeholder/Placeholder.json",
      },
      "module": RequireStatement {
        "filepath": "<rootDir>/test/components/Placeholder/Placeholder.js",
      },
      "pathLine": "components/Placeholder/Placeholder.js",
      "props": RequireStatement {
        "filepath": "!!<rootDir>/loaders/props-loader.js!<rootDir>/test/components/Placeholder/Placeholder.js",
      },
      "slug": "placeholder",
    },
    Object {
      "filepath": "components/RandomButton/RandomButton.js",
      "hasExamples": true,
      "metadata": Object {},
      "module": RequireStatement {
        "filepath": "<rootDir>/test/components/RandomButton/RandomButton.js",
      },
      "pathLine": "components/RandomButton/RandomButton.js",
      "props": RequireStatement {
        "filepath": "!!<rootDir>/loaders/props-loader.js!<rootDir>/test/components/RandomButton/RandomButton.js",
      },
      "slug": "randombutton",
    },
  ],
  "content": undefined,
  "name": "Components",
  "sections": Array [],
  "slug": "components",
}
`;

exports[`processSection() should return an object for section with content 1`] = `
Object {
  "components": Array [],
  "content": RequireStatement {
    "filepath": "!!<rootDir>/loaders/examples-loader.js!<rootDir>/test/components/Button/Readme.md",
  },
  "name": "Readme",
  "sections": Array [],
  "slug": "readme",
}
`;
